Version 0.0.2
- Added support for dynamic directory/file creation.

- Added support for downloading and verifying the RuneScape gamepack.