@@ -1,7 +1,13 @@
 package org;
 
+import org.api.DataManagment;
+import org.data.Vars;
+import org.data.enums.DirectoryFile;
+import org.data.enums.DirectoryFolder;
+
 import javax.swing.*;
 import java.applet.Applet;
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -12,55 +18,27 @@ import java.util.Map;
  */
 public class Main {
 
-    /**
-     * The applet width in pixels.
-     * */
-    private static final int APPLET_WIDTH = 765;
-
-    /**
-     * The applet height in pixels.
-     * */
-    private static final int APPLET_HEIGHT = 503;
-
-    /**
-     * The applet frame width in pixels.
-     * */
-    private static final int APPLET_FRAME_WIDTH = 800;
-
-    /**
-     * The applet frame height in pixels.
-     * */
-    private static final int APPLET_FRAME_HEIGHT = 600;
-
-    /**
-     * The name of the applet.
-     * */
-    private static final String APPLET_NAME = "SPXBot";
-
-    /**
-     * The url in which to grab the client parameters.
-     * */
-    private static final String JAVA_CONFIG_URL = "http://oldschool.runescape.com/jav_config.ws";
-
     public static void main(String[] args) {
-        final ConfigReader CONFIG_READER = new ConfigReader(JAVA_CONFIG_URL);
-        final Map<String, String> CONFIG_PARAMETERS = CONFIG_READER.parseConfig();
-        System.out.println(CONFIG_PARAMETERS.toString());
+        DataManagment.createDirectoryFolders();
+        if (!DataManagment.requestGamepack())
+            return;
 
-        final String JAR_LOCATION = CONFIG_PARAMETERS.get("codebase") + CONFIG_PARAMETERS.get("initial_jar");
+        final ConfigReader CONFIG_READER = new ConfigReader(Vars.get().JAVA_CONFIG_URL);
+        final Map<String, String> CONFIG_PARAMETERS = CONFIG_READER.parseConfig();
+
         try {
-            final URLClassLoader CLASS_LOADER = new URLClassLoader(new URL[]{new URL(JAR_LOCATION)});
+            final URLClassLoader CLASS_LOADER = new URLClassLoader(new URL[]{new File(System.getProperty("user.home") + File.separator + DirectoryFolder.DATA.getParentDirectory().getFolderName() + File.separator + DirectoryFolder.DATA.getFolderName() + File.separator + DirectoryFile.GAMEPACK.getFileName() + DirectoryFile.GAMEPACK.getFileExtension()).toURI().toURL()});
             final Class<?> CLIENT_CLASS = CLASS_LOADER.loadClass(CONFIG_PARAMETERS.get("initial_class").replace(".class", ""));
             final Applet APPLET = (Applet) CLIENT_CLASS.newInstance();
             final RSAppletStub APPLET_STUB = new RSAppletStub(CONFIG_PARAMETERS);
             APPLET_STUB.getAppletContext().setApplet(APPLET);
             APPLET.setStub(APPLET_STUB);
             APPLET.init();
-            APPLET.setSize(APPLET_WIDTH, APPLET_HEIGHT);
+            APPLET.setSize(Vars.get().APPLET_WIDTH, Vars.get().APPLET_HEIGHT);
             APPLET_STUB.setActive(true);
 
-            final JFrame APPLET_FRAME = new JFrame(APPLET_NAME);
-            APPLET_FRAME.setSize(APPLET_FRAME_WIDTH, APPLET_FRAME_HEIGHT);
+            final JFrame APPLET_FRAME = new JFrame(Vars.get().APPLET_NAME);
+            APPLET_FRAME.setSize(Vars.get().APPLET_FRAME_WIDTH, Vars.get().APPLET_FRAME_HEIGHT);
             final JPanel APPLET_PANEL = new JPanel();
             APPLET_FRAME.add(APPLET_PANEL);
             APPLET_PANEL.add(APPLET);
